[tool.poetry]
name = "functionrl"
version = "0.1.0"
description = "Functional Reinforcement Learning"
authors = ["John Hartquist <john@hartquist.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jhartquist/functionrl"
repository = "https://github.com/jhartquist/functionrl"
keywords = ["functionrl", "functional", "functional programming", "reinforcement learning"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.3"
requests = "^2.27.1"
numpy = "^1.22.0"
gym = "^0.21.0"
pandas = "^1.3.5"

[tool.poetry.dev-dependencies]
coverage = {extras = ["toml"], version = "^6.2"}
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-mock = "^3.6.1"

[tool.poetry.scripts]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["functionrl"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["setuptools", "poetry_core>=1.0"]
build-backend = "poetry.core.masonry.api"
