[tool.poetry]
name = "functionrl-notebooks"
version = "0.1.0"
description = ""
authors = ["John Hartquist <john@hartquist.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
functionrl = {path = "..", develop=true}
jupyterlab = "^3.2.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
